# ComfyUI-ClothDecorator

./: .commit_msg.txt  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
docs/: TAGGER_SERVER.md
examples/: mock_tagger_server.py  requirements-tagger.txt  wd14_tagger_server.py
nodes/: __init__.py  auto_mode.py  categories.py  color_analysis.py  color_data.py  decoration_data.py  direct_paint.py  image_analyzer.py  mask_prep.py  mask_utils.py  material_data.py  model_adapter.py  model_profiles.py  node_base.py  paint_ops.py  paste_back.py  pattern_data.py  prompt_composer.py  region_extract.py  subject_data.py  tag_mapping.py  vocabulary.py
tests/: test_categories.py  test_color_analysis.py  test_conflict_detection.py  test_image_analyzer_node.py  test_mask_utils.py  test_model_profiles.py  test_output_language.py  test_paint_ops.py  test_robustness.py  test_tag_mapping.py  test_vocab_data_modules.py  test_vocabulary.py  test_vocabulary_ja.py
