[project]
name            = "comfyui-cloth-decorator"
version         = "0.9.4"
description     = "ComfyUI custom nodes: decorate mask-selected clothing regions via prompt (generative) or direct pixel editing"
requires-python = ">=3.10"
dependencies    = ["numpy>=1.24", "Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["."]
addopts    = "--import-mode=importlib"
